--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -10,7 +10,7 @@
     "* via API:et kan skolor hämtas med [skolmaten.se/api/openmeal/v2/distributors.json](https://skolmaten.se/api/openmeal/v2/distributors.json)\n",
     " \n",
     " \n",
-    "* this [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb) version 1.3\n",
+    "* this [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb) version 1.4\n",
     " \n",
     " \n",
     "### Massa poster som pekar på ett API \n",
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d99b982",
+   "id": "d7476d37",
    "metadata": {},
    "source": [
     "## Spec version 3.0\n",
@@ -913,15 +913,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fbebfa7",
+   "id": "1811f805",
    "metadata": {},
    "source": [
     "### Hur borde man tänkt?\n",
     "1. inga text strängar och peka \"samma som\" så man kan analysera maträtten mera,,,,\n",
     "  1. vet ej vad som är bra finns initiativ som att [se.openfoodfacts.org](https://se.openfoodfacts.org/)\n",
-    "1. skolmats specandet verkar startat 2015 och det borde finnas enklare sätt att lämna input eller se feedback som ges på [twitter](https://twitter.com/Landgren/status/1446155666117304330?s=20&t=L4s0-FwJw84klDiDm8171Q) att öppna skoldataplattformen vill ha bilder borde tas om hand lite mera strukturerat och kunna följas vad som händer eller inte händer...\n",
+    "1. skolmats specandet [verkar startat 2015 med pengar från Vinnova](https://youtu.be/JEc6vuys17c?t=1319) och det borde finnas enklare sätt att lämna input eller se feedback som ges på [twitter](https://twitter.com/Landgren/status/1446155666117304330?s=20&t=L4s0-FwJw84klDiDm8171Q) att öppna skoldataplattformen vill ha bilder borde tas om hand lite mera strukturerat och kunna följas vad som händer eller inte händer...\n",
     "  1. använda tydlig versionshantering med datum\n",
-    "  1. ha en plats där alla synpunkter samlas in\n",
+    "  1. ha en plats där alla synpunkter samlas in nu försvinner dom på [twitter]()\n",
     "  1. enkelt att se skillnad mellan olika versioner av specar\n",
     "  1. definiera upp användarfall\n",
     "     1. gissar dagens lösning fungerar i vardagen att se att imorgon är det köttbullar\n",
@@ -929,7 +929,6 @@
     "        1. för att få en bild över näringsinnehållet på mat som serveras\n",
     "        1. att enkelt jmf olika skolor då datat inte har [skolverkets id](https://www.scb.se/lamna-uppgifter/undersokningar/Skolenhetsregistret/)\n",
     "           1. kanske intressant se matinnehåll vs. hur eleverna presterar på nationella prov, matsvinn, skattesats i kommunen vs. mat som serveras, socialgrupp som bor i området och mat som levereras, brottslighete vs. mat som serveras....\n",
-    "        1. påverkar typ av mat som serverar xxxx\n",
     "        1. att servera skolmaten på barnets hemspråk så att även föräldrar utan svenska kunskaper kan se vad barnet äter i skolan... (är idag tyvärr vanligt att i utsatta områden är språkkunskaperna så dåliga att läraren måste ha tolk på föräldrarsamtalen...)\n",
     "           "
    ]
@@ -937,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3822c7de",
+   "id": "e82e4c09",
    "metadata": {},
    "outputs": [],
    "source": []
