--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7476d37",
+   "id": "8d4605ed",
    "metadata": {},
    "source": [
     "## Spec version 3.0\n",
@@ -913,11 +913,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1811f805",
+   "id": "7beea1ce",
    "metadata": {},
    "source": [
     "### Hur borde man tänkt?\n",
-    "1. inga text strängar och peka \"samma som\" så man kan analysera maträtten mera,,,,\n",
+    "\n",
+    "![](https://upload.wikimedia.org/wikipedia/commons/7/72/5-star_deployment_scheme_for_Open_Data.png)\n",
+    "\n",
+    "1. inga text strängar och peka \"samma som\" så man kan analysera maträtten mera... dvs, **[5 star open data](https://5stardata.info/en/)**\n",
     "  1. vet ej vad som är bra finns initiativ som att [se.openfoodfacts.org](https://se.openfoodfacts.org/)\n",
     "1. skolmats specandet [verkar startat 2015 med pengar från Vinnova](https://youtu.be/JEc6vuys17c?t=1319) och det borde finnas enklare sätt att lämna input eller se feedback som ges på [twitter](https://twitter.com/Landgren/status/1446155666117304330?s=20&t=L4s0-FwJw84klDiDm8171Q) att öppna skoldataplattformen vill ha bilder borde tas om hand lite mera strukturerat och kunna följas vad som händer eller inte händer...\n",
     "  1. använda tydlig versionshantering med datum\n",
@@ -929,14 +932,14 @@
     "        1. för att få en bild över näringsinnehållet på mat som serveras\n",
     "        1. att enkelt jmf olika skolor då datat inte har [skolverkets id](https://www.scb.se/lamna-uppgifter/undersokningar/Skolenhetsregistret/)\n",
     "           1. kanske intressant se matinnehåll vs. hur eleverna presterar på nationella prov, matsvinn, skattesats i kommunen vs. mat som serveras, socialgrupp som bor i området och mat som levereras, brottslighete vs. mat som serveras....\n",
-    "        1. att servera skolmaten på barnets hemspråk så att även föräldrar utan svenska kunskaper kan se vad barnet äter i skolan... (är idag tyvärr vanligt att i utsatta områden är språkkunskaperna så dåliga att läraren måste ha tolk på föräldrarsamtalen...)\n",
+    "        1. att presentera skolmaten på barnets hemspråk så att även föräldrar utan svenska kunskaper kan se vad barnet äter i skolan... (är idag tyvärr vanligt att i utsatta områden är språkkunskaperna så dåliga att läraren måste ha tolk på föräldrarsamtalen...)\n",
     "           "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e82e4c09",
+   "id": "e98a08ee",
    "metadata": {},
    "outputs": [],
    "source": []
