--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -8,6 +8,9 @@
     "Enl. [dataportal.se identifierare ifrån RDF](https://community.dataportal.se/topic/368/dataportal-ses-identifierare-ifr%C3%A5n-rdf)\n",
     "* finns ett API för [skolmat.se](https://skolmaten.se/) på [skolmaten.se/about/api/](https://skolmaten.se/about/api)\n",
     "* via API:et kan skolor hämtas med [skolmaten.se/api/openmeal/v2/distributors.json](https://skolmaten.se/api/openmeal/v2/distributors.json)\n",
+    "* dataportal.se diskuterar även vilka kategrier som skall anges på datat [länk](https://community.dataportal.se/topic/364/kategorier-av-%C3%B6ppna-data/10)\n",
+    "  * för skolmaten finns lite spretiga specar kanske redan i dessa specar bör det finnas vilka kategorier man pekar på detta data från svenska dataportalen/ europiska dataportalen\n",
+    "    * mer proffsigt vore att detta var data i en kunskapsgraf ung. som Wikidata skapats för att dela WIkipedia se [video](https://www.youtube.com/watch?v=m_9_23jXPoE)\n",
     " \n",
     " \n",
     "* this [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb) version 1.4\n",
@@ -67,7 +70,7 @@
     "          1. nytt 3.3 gissar jag är ( se exempel nedan)\n",
     "             1. en textsträng med \"ingredients\" där ingridienserna är på engelska och separerade med komma\n",
     "             1. en array med \"allergens\" där allergenerna är textsträngar på engelska utan \"samma som\"\n",
-    "             1. \n",
+    "             1. i exmplet finns \"nutrients\" men inget bra exempel hur man tänkt.... gissar man hamnat i en återvändsgränd med alla textsträngar....\n",
     "     1. en [versions historik](https://sambruk.github.io/Open-Meal/docs/API/version_history) utan datum men med skillnad av senaste spec och Örebro 2015...\n",
     "  1. NSÖD slutrapport sida 11 [länk](http://ri.diva-portal.org/smash/get/diva2:1654808/FULLTEXT01.pdf) där det vagt skrivs \"___Stöd för specifikationen är inte helt implementerat i leverantörernas system på grund av att vi genom leverantörernas intresse tagit fram ytterligare en version av specifikationen under projektet___\" vilken version av spec och var den finns/ innebär förtäljer inte detta hemliga projekt....\n",
     "  1. på [Facebook sägs april 27 2020](https://www.facebook.com/groups/openmealinformation/posts/2710894565798755/) att en spec skall presenteras inga tydliga länkar var... klickar man runt hamnar man på [orebrokommun.github.io/Open-Meal-Information](https://orebrokommun.github.io/Open-Meal-Information/swe/historien-bakom-mltidsdata.html)\n"
@@ -870,7 +873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d4605ed",
+   "id": "d90126a0",
    "metadata": {},
    "source": [
     "## Spec version 3.0\n",
@@ -913,7 +916,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7beea1ce",
+   "id": "c28e49aa",
    "metadata": {},
    "source": [
     "### Hur borde man tänkt?\n",
@@ -921,7 +924,7 @@
     "![](https://upload.wikimedia.org/wikipedia/commons/7/72/5-star_deployment_scheme_for_Open_Data.png)\n",
     "\n",
     "1. inga text strängar och peka \"samma som\" så man kan analysera maträtten mera... dvs, **[5 star open data](https://5stardata.info/en/)**\n",
-    "  1. vet ej vad som är bra finns initiativ som att [se.openfoodfacts.org](https://se.openfoodfacts.org/)\n",
+    "  1. vet ej vad som är bra finns initiativ som att [se.openfoodfacts.org](https://se.openfoodfacts.org/) att försla speca skomat har gjorts sedan 2015 så man borde kanske kunnat ta fram en egen databas....\n",
     "1. skolmats specandet [verkar startat 2015 med pengar från Vinnova](https://youtu.be/JEc6vuys17c?t=1319) och det borde finnas enklare sätt att lämna input eller se feedback som ges på [twitter](https://twitter.com/Landgren/status/1446155666117304330?s=20&t=L4s0-FwJw84klDiDm8171Q) att öppna skoldataplattformen vill ha bilder borde tas om hand lite mera strukturerat och kunna följas vad som händer eller inte händer...\n",
     "  1. använda tydlig versionshantering med datum\n",
     "  1. ha en plats där alla synpunkter samlas in nu försvinner dom på [twitter]()\n",
@@ -929,17 +932,18 @@
     "  1. definiera upp användarfall\n",
     "     1. gissar dagens lösning fungerar i vardagen att se att imorgon är det köttbullar\n",
     "     1. dagens lösning fungerar inte för användarfall som\n",
-    "        1. för att få en bild över näringsinnehållet på mat som serveras\n",
+    "        1. att få en bild över näringsinnehållet på mat som serveras\n",
     "        1. att enkelt jmf olika skolor då datat inte har [skolverkets id](https://www.scb.se/lamna-uppgifter/undersokningar/Skolenhetsregistret/)\n",
     "           1. kanske intressant se matinnehåll vs. hur eleverna presterar på nationella prov, matsvinn, skattesats i kommunen vs. mat som serveras, socialgrupp som bor i området och mat som levereras, brottslighete vs. mat som serveras....\n",
     "        1. att presentera skolmaten på barnets hemspråk så att även föräldrar utan svenska kunskaper kan se vad barnet äter i skolan... (är idag tyvärr vanligt att i utsatta områden är språkkunskaperna så dåliga att läraren måste ha tolk på föräldrarsamtalen...)\n",
+    "        1. att ha en bilddatabas med skolmaträtterna som kan användas\n",
     "           "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e98a08ee",
+   "id": "8ce9e7ea",
    "metadata": {},
    "outputs": [],
    "source": []
