--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d90126a0",
+   "id": "fbe90ce8",
    "metadata": {},
    "source": [
     "## Spec version 3.0\n",
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c28e49aa",
+   "id": "90692f6f",
    "metadata": {},
    "source": [
     "### Hur borde man tänkt?\n",
@@ -924,11 +924,12 @@
     "![](https://upload.wikimedia.org/wikipedia/commons/7/72/5-star_deployment_scheme_for_Open_Data.png)\n",
     "\n",
     "1. inga text strängar och peka \"samma som\" så man kan analysera maträtten mera... dvs, **[5 star open data](https://5stardata.info/en/)**\n",
-    "  1. vet ej vad som är bra finns initiativ som att [se.openfoodfacts.org](https://se.openfoodfacts.org/) att försla speca skomat har gjorts sedan 2015 så man borde kanske kunnat ta fram en egen databas....\n",
+    "  1. vet ej vad som är bra finns initiativ som att [se.openfoodfacts.org](https://se.openfoodfacts.org/) att första specandet av sbensk skolmat verkar ha gjorts redan [2015](https://youtu.be/JEc6vuys17c?t=1319)  så man borde kanske kunnat under dessa 7 år ta fram en egen databas med skolmat som innehåller näring, allergener, bilder....\n",
     "1. skolmats specandet [verkar startat 2015 med pengar från Vinnova](https://youtu.be/JEc6vuys17c?t=1319) och det borde finnas enklare sätt att lämna input eller se feedback som ges på [twitter](https://twitter.com/Landgren/status/1446155666117304330?s=20&t=L4s0-FwJw84klDiDm8171Q) att öppna skoldataplattformen vill ha bilder borde tas om hand lite mera strukturerat och kunna följas vad som händer eller inte händer...\n",
-    "  1. använda tydlig versionshantering med datum\n",
-    "  1. ha en plats där alla synpunkter samlas in nu försvinner dom på [twitter]()\n",
+    "  1. använda tydlig versionshantering med datum på specar\n",
+    "  1. ha en plats där alla synpunkter samlas in nu försvinner dom på [twitter](https://twitter.com/Landgren/status/1446155666117304330?s=20&t=L4s0-FwJw84klDiDm8171Q)\n",
     "  1. enkelt att se skillnad mellan olika versioner av specar\n",
+    "  1. att redan i specandet ange hur [metadata skall laddas på svenska portalen/ europeiska portalen](https://community.dataportal.se/topic/364/kategorier-av-%C3%B6ppna-data/10) dagens ide att skapa nya \"unika\" dataset för varje kommun och att man inte enkelt kan hitta allt öppna data för en specifik skola är dålig design\n",
     "  1. definiera upp användarfall\n",
     "     1. gissar dagens lösning fungerar i vardagen att se att imorgon är det köttbullar\n",
     "     1. dagens lösning fungerar inte för användarfall som\n",
@@ -943,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ce9e7ea",
+   "id": "5710e8c5",
    "metadata": {},
    "outputs": [],
    "source": []
