--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -6,9 +6,10 @@
    "metadata": {},
    "source": [
     "Enl. [dataportal.se identifierare ifrån RDF](https://community.dataportal.se/topic/368/dataportal-ses-identifierare-ifr%C3%A5n-rdf)\n",
-    "* finns ett API för [skolmat.se](https://skolmaten.se/) på [skolmaten.se/about/api/](https://skolmaten.se/about/api)\n",
-    "* via API:et kan skolor hämtas med [skolmaten.se/api/openmeal/v2/distributors.json](https://skolmaten.se/api/openmeal/v2/distributors.json)\n",
-    "* dataportal.se diskuterar även vilka kategrier som skall anges på datat [länk](https://community.dataportal.se/topic/364/kategorier-av-%C3%B6ppna-data/10)\n",
+    "* finns ett API för [skolmat.se](https://skolmaten.se/) på [skolmaten.se/about/api](https://skolmaten.se/about/api)\n",
+    "* via API:et kan skolor hämtas med [skolmaten.se/api/openmeal/v2/distributors.json] (https://skolmaten.se/api/openmeal/v2/distributors.json)\n",
+    "  * finns GITHUB [Samburk/Open-Meal](https://github.com/Sambruk/Open-Meal) och [orebrokommun/Open-Meal-Information](https://github.com/orebrokommun/Open-Meal-Information/)(senast uppdaterad för [6 år sedan](https://github.com/Orebrokommun/Open-Meal-Information/commit/4fa521c07fa41e9b43cd87c03ece905643bebf14))\n",
+    "* dataportal.se diskuterar även vilka kategorier som skall anges på datat [länk](https://community.dataportal.se/topic/364/kategorier-av-%C3%B6ppna-data/10)\n",
     "  * för skolmaten finns lite spretiga specar kanske redan i dessa specar bör det finnas vilka kategorier man pekar på detta data från svenska dataportalen/ europiska dataportalen\n",
     "    * mer proffsigt vore att detta var data i en kunskapsgraf ung. som Wikidata skapats för att dela WIkipedia se [video](https://www.youtube.com/watch?v=m_9_23jXPoE)\n",
     " \n",
@@ -44,7 +45,7 @@
     "  * data.europa.eu \"[Skolmat](https://data.europa.eu/data/datasets/https-linkoping-entryscape-net-store-1-resource-28?locale=en)\" verkar vara Linköpings kommun\n",
     "* finns säkert fler som jag missat.... 😅\n",
     "\n",
-    "**Fundering på svenska portalen och skolmatsdatat**\n",
+    "**Fundering på www.dataportal.se och skolmatsdatat**\n",
     "1. enkel koppling Europeiska dataportalen till den svenska portalen finns det för samma dataset?\n",
     "  1. borde vara i dct:identifier men den pekar även till portalen innan svenska dataportalen se Lund [233_9780](https://data.europa.eu/api/hub/repo/distributions/1d1c2a43-0099-449c-9ae5-71568a4c12b0.rdf) som i EU portalen pekar på https://katalog.lund.se/store/1/resource/11 dvs. tillbaka till Lund jmf svenska portalens metadata [233_9780](https://admin.dataportal.se/store/233/metadata/9780?recursive=dcat)\n",
     "     1. om det är ETT API varför hitta på nya identifierare?!?!? kanske **samma som** behövs\n",
@@ -54,8 +55,8 @@
     "1. ett API borde räcka med en post i dataportalen, nu finns 281 kommuner i detta API men bara en handfull har skapat post i portalen....\n",
     "1. ingen styrning finns att detta enstaka API får samma kategorier i dataportalen se även [diskussion om kategorier](https://github.com/DIGGSweden/DCAT-AP-SE/issues/86) där man vill ha flera kategorier... känns som i detta exempel så är det styrning/kvalitetssäkring som saknas\n",
     "  1. Jag skulle kalla detta kaos [#metadatadebt](https://twitter.com/salgo60/status/1237262589341687809?s=20&t=qYCj7VZ0jpQW0sYDv9gVsg) ingen är vinnare...\n",
-    "  1. Borde man inte i den svenska portalen kunna ange engelska kategorier så det blir rätt på EU nivå...\n",
-    "1. **Skolenheter identifieras** av Skolverket(enl. [SFS 2010:800](https://www.riksdagen.se/sv/dokument-lagar/dokument/svensk-forfattningssamling/skollag-2010800_sfs-2010-800)) och SCB med [skolenheter i skolenhetsregistret](https://www.scb.se/lamna-uppgifter/undersokningar/Skolenhetsregistret/) borde inte detta id finnas i detta API? Var skickar man change requests? Finns dom på GITHUB? Tycker det är sådan info som borde finnas i svenska dataporalen så man enkelt kan hitta så man kan jobba med datat... samma API 290 ggr blir galet...\n",
+    "  1. Borde man inte i den svenska portalen kunna ange engelska kategorier så det blir rätt på EU nivå... och/eller att alla kategorier finns på minst svenska/engelska\n",
+    "1. **Skolenheter identifieras** av Skolverket(enl. [SFS 2010:800](https://www.riksdagen.se/sv/dokument-lagar/dokument/svensk-forfattningssamling/skollag-2010800_sfs-2010-800)) och SCB med [skolenheter i skolenhetsregistret](https://www.scb.se/lamna-uppgifter/undersokningar/Skolenhetsregistret/)  \n",
     "  1. i Wikidata har vi ett projekt där vi försöker identifiera **alla skolor som någonsin har funnits i Sverige** dvs. idag har vi alla skolor i skolenhetsregistret med unika Wikidata Qnummer se [Wikidata:WikiProject_Sweden/Schools](https://www.wikidata.org/wiki/Wikidata:WikiProject_Sweden/Schools)\n",
     "  1. Exempel Öxnered skola\n",
     "     1. Skolregistret har skolenhetskod [68637661](https://api.scb.se/UF0109/v2/skolenhetsregister/sv/skolenhet/68637661)\n",
@@ -63,14 +64,15 @@
     "     1. Wikidata har skolenheten = [Q89198196](https://www.wikidata.org/wiki/Q89198196?uselang=sv) som är en del av grundskolan = WD [Q89904732](https://www.wikidata.org/wiki/Q89904732?uselang=sv) Öxnered skola  \n",
     "     1. Borde på svenska dataportalen att gå att söka ut vilka dataset som är kopplade till en skolenhet!!! \n",
     ">   [SFS 2010:800](https://www.riksdagen.se/sv/dokument-lagar/dokument/svensk-forfattningssamling/skollag-2010800_sfs-2010-800) **skolenhet**: av huvudman för annan skolform än förskola organiserad enhet som omfattar verksamhet i en eller flera skolbyggnader som ligger nära varandra och till enheten knuten verksamhet som inte bedrivs i någon skolbyggnad,\n",
-    "1. Maträtter verkar skickas runt som textsträngar dvs. man kan inte analysera maträtterna mera med avseende på näringsinnehåll, vad en skattekrona ger för typ av mat, matsvinn vs. typ av mat som serveras eller om det har med skolan att göra, går ej heller knyta en bild till maten eller skapa ett bildbibliotek med skolmat.... det pratades Sep 23, 2021 om att [Öppna skolplattformen ville ha bild](https://twitter.com/Landgren/status/1440975114200305665?s=20&t=29rZhe6Xxxx4DyrpPALQLw) på maten med NSÖD projektet på [twitter](https://twitter.com/Landgren/status/1446155666117304330?s=20&t=L4s0-FwJw84klDiDm8171Q) men svårt att veta om det blev något har inte hittat NSÖD dokumentation/spec som förklarar vad som gjorts även en brist på en projektyta där NSÖD samplar feedback är svår att hitta.... det som hittats....\n",
+    "1. Maträtter verkar skickas runt som textsträngar dvs. man kan inte analysera maträtterna med avseende på näringsinnehåll, vad en skattekrona ger för typ av mat, matsvinn vs. typ av mat som serveras eller om det har med skolan att göra, går ej heller knyta en bild till maten eller skapa ett bildbibliotek med skolmat.... det pratades Sep 23, 2021 om att [Öppna skolplattformen ville ha bild](https://twitter.com/Landgren/status/1440975114200305665?s=20&t=29rZhe6Xxxx4DyrpPALQLw) på maten med NSÖD projektet på [twitter](https://twitter.com/Landgren/status/1446155666117304330?s=20&t=L4s0-FwJw84klDiDm8171Q) men svårt att veta om det blev något har inte hittat NSÖD dokumentation/spec som förklarar vad som gjorts även en brist på en projektyta där NSÖD samplar feedback är svår att hitta.... det som hittats....\n",
     "  1. GITHUB som inte säger mer https://sambruk.github.io/Open-Meal/docs/background\n",
-    "     1. en [3.3 spec utan datum](https://sambruk.github.io/Open-Meal/openapi-specification)\n",
+    "     1. en [3.3 spec utan datum](https://sambruk.github.io/Open-Meal/openapi-specification) / [swagger.io](https://editor.swagger.io/?url=https://raw.githubusercontent.com/Sambruk/Open-Meal/main/OpenAPI%20Specification.json)\n",
     "        1. ett [exempel hittas](https://sambruk.github.io/Open-Meal/openapi-specification) men inte hittat dokumentation\n",
     "          1. nytt 3.3 gissar jag är ( se exempel nedan)\n",
     "             1. en textsträng med \"ingredients\" där ingridienserna är på engelska och separerade med komma\n",
     "             1. en array med \"allergens\" där allergenerna är textsträngar på engelska utan \"samma som\"\n",
     "             1. i exmplet finns \"nutrients\" men inget bra exempel hur man tänkt.... gissar man hamnat i en återvändsgränd med alla textsträngar....\n",
+    "          1.\n",
     "     1. en [versions historik](https://sambruk.github.io/Open-Meal/docs/API/version_history) utan datum men med skillnad av senaste spec och Örebro 2015...\n",
     "  1. NSÖD slutrapport sida 11 [länk](http://ri.diva-portal.org/smash/get/diva2:1654808/FULLTEXT01.pdf) där det vagt skrivs \"___Stöd för specifikationen är inte helt implementerat i leverantörernas system på grund av att vi genom leverantörernas intresse tagit fram ytterligare en version av specifikationen under projektet___\" vilken version av spec och var den finns/ innebär förtäljer inte detta hemliga projekt....\n",
     "  1. på [Facebook sägs april 27 2020](https://www.facebook.com/groups/openmealinformation/posts/2710894565798755/) att en spec skall presenteras inga tydliga länkar var... klickar man runt hamnar man på [orebrokommun.github.io/Open-Meal-Information](https://orebrokommun.github.io/Open-Meal-Information/swe/historien-bakom-mltidsdata.html)\n"
@@ -873,7 +875,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbe90ce8",
+   "id": "f418b9ef",
    "metadata": {},
    "source": [
     "## Spec version 3.0\n",
@@ -916,7 +918,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90692f6f",
+   "id": "134a3a5f",
    "metadata": {},
    "source": [
     "### Hur borde man tänkt?\n",
@@ -944,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5710e8c5",
+   "id": "74f0d779",
    "metadata": {},
    "outputs": [],
    "source": []
