--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -5,16 +5,18 @@
    "id": "993d04ac",
    "metadata": {},
    "source": [
+    "## Skolmaten - Open-Meal\n",
     "Enl. [dataportal.se identifierare ifrån RDF](https://community.dataportal.se/topic/368/dataportal-ses-identifierare-ifr%C3%A5n-rdf)\n",
-    "* finns ett API för [skolmat.se](https://skolmaten.se/) på [skolmaten.se/about/api](https://skolmaten.se/about/api)\n",
-    "* via API:et kan skolor hämtas med [skolmaten.se/api/openmeal/v2/distributors.json] (https://skolmaten.se/api/openmeal/v2/distributors.json)\n",
+    "* finns ett API för [skolmat.se](https://skolmaten.se/) på [skolmaten about](https://skolmaten.se/about/api)\n",
+    "* via API:et kan skolor hämtas med [openmeal/v2/distributors.json](https://skolmaten.se/api/openmeal/v2/distributors.json)\n",
     "  * finns GITHUB [Samburk/Open-Meal](https://github.com/Sambruk/Open-Meal) och [orebrokommun/Open-Meal-Information](https://github.com/orebrokommun/Open-Meal-Information/)(senast uppdaterad för [6 år sedan](https://github.com/Orebrokommun/Open-Meal-Information/commit/4fa521c07fa41e9b43cd87c03ece905643bebf14))\n",
     "* dataportal.se diskuterar även vilka kategorier som skall anges på datat [länk](https://community.dataportal.se/topic/364/kategorier-av-%C3%B6ppna-data/10)\n",
     "  * för skolmaten finns lite spretiga specar kanske redan i dessa specar bör det finnas vilka kategorier man pekar på detta data från svenska dataportalen/ europiska dataportalen\n",
     "    * mer proffsigt vore att detta var data i en kunskapsgraf ung. som Wikidata skapats för att dela WIkipedia se [video](https://www.youtube.com/watch?v=m_9_23jXPoE)\n",
+    "* massa statlga pengar/resurser har lagts på detta [Vinnova projekt 2015](https://youtu.be/JEc6vuys17c?t=1314) och nu 7 år senare [NSÖD projektet](https://community.dataportal.se/topic/169/projektet-ns%C3%B6d-nationell-skalning-%C3%B6ppna-data?_=1655102286079)\n",
     " \n",
     " \n",
-    "* this [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb) version 1.4\n",
+    "* den här [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb) version 1.4\n",
     " \n",
     " \n",
     "### Massa poster som pekar på ett API \n",
@@ -74,6 +76,7 @@
     "             1. i exmplet finns \"nutrients\" men inget bra exempel hur man tänkt.... gissar man hamnat i en återvändsgränd med alla textsträngar....\n",
     "          1.\n",
     "     1. en [versions historik](https://sambruk.github.io/Open-Meal/docs/API/version_history) utan datum men med skillnad av senaste spec och Örebro 2015...\n",
+    "  1. bra att man pekar på att geo koordinaterna skall vara [WGS84](https://sv.wikipedia.org/wiki/World_Geodetic_System_1984) ibland anges det som [epsg:4326](https://epsg.io/4326) se [Wikipedia](https://en.wikipedia.org/wiki/EPSG_Geodetic_Parameter_Dataset) vilket kanske kan vara tydligare....\n",
     "  1. NSÖD slutrapport sida 11 [länk](http://ri.diva-portal.org/smash/get/diva2:1654808/FULLTEXT01.pdf) där det vagt skrivs \"___Stöd för specifikationen är inte helt implementerat i leverantörernas system på grund av att vi genom leverantörernas intresse tagit fram ytterligare en version av specifikationen under projektet___\" vilken version av spec och var den finns/ innebär förtäljer inte detta hemliga projekt....\n",
     "  1. på [Facebook sägs april 27 2020](https://www.facebook.com/groups/openmealinformation/posts/2710894565798755/) att en spec skall presenteras inga tydliga länkar var... klickar man runt hamnar man på [orebrokommun.github.io/Open-Meal-Information](https://orebrokommun.github.io/Open-Meal-Information/swe/historien-bakom-mltidsdata.html)\n"
    ]
