--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -13,9 +13,30 @@
     "* dataportal.se diskuterar även vilka kategorier som skall anges på datat [länk](https://community.dataportal.se/topic/364/kategorier-av-%C3%B6ppna-data/10)\n",
     "  * för skolmaten finns lite spretiga specar kanske redan i dessa specar bör det finnas vilka kategorier man pekar på detta data från svenska dataportalen/ europiska dataportalen\n",
     "    * mer proffsigt vore att detta var data i en kunskapsgraf ung. som Wikidata skapats för att dela WIkipedia se [video](https://www.youtube.com/watch?v=m_9_23jXPoE)\n",
-    "* massa statlga pengar/resurser har lagts på detta [Vinnova projekt 2015](https://youtu.be/JEc6vuys17c?t=1314) och nu 7 år senare [NSÖD projektet](https://community.dataportal.se/topic/169/projektet-ns%C3%B6d-nationell-skalning-%C3%B6ppna-data?_=1655102286079)\n",
+    "* massa statlga pengar/resurser har lagts på detta [Vinnova projekt 2015](https://youtu.be/JEc6vuys17c?t=1314) och nu 7 år senare [NSÖD projektet](https://community.dataportal.se/topic/169/projektet-ns%C3%B6d-nationell-skalning-%C3%B6ppna-data?_=1655102286079) dock är denna resa dåligt dokumenterad?!?!? jag hittar inte användarfall (vore bra [stories som denna](https://github.com/christerresin/thetable/issues/18)), projektyta osv. det [som sägs](https://sambruk.github.io/Open-Meal/docs/background#tag/Meal/paths/~1meals/get)\n",
+    "\n",
+    "> The goal was to create an open specification that could be used by all suppliers of systems for planning meals and delivering menus and to keep it as small as possible as to not create unnecessary overhead for suppliers. The project delivered a specification for delivering the content as JSON and another as iCalendar for use with electronic calendars.\n",
     " \n",
-    " \n",
+    "> One motivation for this project was to create a proof-of-concept for solving one of the problems identified by the national coordination of municipal open data headed by SKR (an organisation for cooperation run by the municipalities) namely that open data published by 290 municipalities in 290 different ways will be very hard to reuse. Since the value of open data is realized in the reuse this aspect is critical in achieving the desired effects (new and better services and transparency in government).\n",
+    "  \n",
+    "  * [Dopter](http://dopter.se/) var inblandade 2015\n",
+    "    * [Anders Krohn](https://www.linkedin.com/in/andreaskrohn) - github []()\n",
+    "    * [Gustaf Rosenblad](https://www.linkedin.com/in/gustaf-rosenblad) - github [](https://github.com/rosecoder)\n",
+    "    \n",
+    ">   The project ran from november 2014 thru june 2015 and involved the municipality och Örebro with Björn Hagström as project lead, Dopter AB represented by Andreas Krohn and Mashie AB, the supplier och the system for planing meals at the municipality, represented by Erik Arnwald and Jörgen Brandt.\n",
+    "\n",
+    "\n",
+    "  * verkar som [Matilda Foodtech](https://www.matildafoodtech.com) och IST?!?! jobbar med detta nu ([GITHUB changes](https://github.com/Sambruk/Open-Meal/commits))\n",
+    "     * [Rickard Svensson](https://www.linkedin.com/in/rickardsvenssonlund/) github [ricsv](https://github.com/ricsv)\n",
+    "     * [Jimmy Revtorp](https://www.linkedin.com/in/jimmy-revtorp-7635a758) - github [Lonestarrk](https://github.com/Lonestarrk)\n",
+    "     \n",
+    ">  No work was done on the specification until the Swedish project NSÖD (a national project helping municipalities and regions to publish open data in standardized formats). NSÖD created a new version of the specification (3.0) and worked together with Matilda FoodTech and IST to further improve the specification. Soon version 3.1, 3.2 and 3.3 were released with improvements like more structured ingredient- and nutritional information.\n",
+    "\n",
+    "* relaterade projekt [Utforma framtidens hållbara skolmåltidssystem!](https://www.vinnova.se/e/hallbart-matsystem/utforma-framtidens-hallbara-skolmaltidssystem/)\n",
+    "  * [\"Ett nytt recept för skolmåltider – hur blir hela matsystemet hållbart?\"](https://www.livsmedelsverket.se/ettnyttrecept)\n",
+    "     * [Systemkarta](https://www.livsmedelsverket.se/globalassets/matvanor-halsa-miljo/maltider-vard-skola-omsorg/skola/systemkarta_ett-nytt-recept-pa-skolmaltider_2020.pdf)\n",
+    "     ![](https://blogger.googleusercontent.com/img/a/AVvXsEjTxo_p1uQS1Vli8Cy8WppYCl_E_t0PKMqzEtMz1yjcJJiz2TuhGmoX97w-_auQ2HRFlAB63SPqY81QL7H0fg7y6VhJra-to0ey_vmtOXiXQFOtGqQixadhKhmlVhFBO21btL5Igg_T1q3MipN9Z_ioi-in_xiDfQYRR55cKQ_t8SXDrhqxpZE2rfFtAQ=w634-h347) \n",
+    "     \n",
     "* den här [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb) version 1.4\n",
     " \n",
     " \n",
