--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -35,13 +35,13 @@
     "     \n",
     ">  No work was done on the specification until the Swedish project NSÖD (a national project helping municipalities and regions to publish open data in standardized formats). NSÖD created a new version of the specification (3.0) and worked together with Matilda FoodTech and IST to further improve the specification. Soon version 3.1, 3.2 and 3.3 were released with improvements like more structured ingredient- and nutritional information.\n",
     "\n",
-    "* relaterade projekt [Utforma framtidens hållbara skolmåltidssystem!](https://www.vinnova.se/e/hallbart-matsystem/utforma-framtidens-hallbara-skolmaltidssystem/)\n",
+    "* **relaterat projekt med större visioner** [Utforma framtidens hållbara skolmåltidssystem!](https://www.vinnova.se/e/hallbart-matsystem/utforma-framtidens-hallbara-skolmaltidssystem/) - 7 miljarder kostar skolmaten per år --> [vi skall skapa hållbart skolmatssystem](https://www.livsmedelsverket.se/ettnyttrecept)\n",
     "  * [\"Ett nytt recept för skolmåltider – hur blir hela matsystemet hållbart?\"](https://www.livsmedelsverket.se/ettnyttrecept)\n",
     "     * [Systemkarta](https://www.livsmedelsverket.se/globalassets/matvanor-halsa-miljo/maltider-vard-skola-omsorg/skola/systemkarta_ett-nytt-recept-pa-skolmaltider_2020.pdf)\n",
     "     ![](https://blogger.googleusercontent.com/img/a/AVvXsEjTxo_p1uQS1Vli8Cy8WppYCl_E_t0PKMqzEtMz1yjcJJiz2TuhGmoX97w-_auQ2HRFlAB63SPqY81QL7H0fg7y6VhJra-to0ey_vmtOXiXQFOtGqQixadhKhmlVhFBO21btL5Igg_T1q3MipN9Z_ioi-in_xiDfQYRR55cKQ_t8SXDrhqxpZE2rfFtAQ=w634-h347) \n",
-    "     \n",
+    ">> Projektet är en del i en större satsning kring mat och hållbarhet som ska öka olika aktörers förmåga att bidra till de globala hållbarhetsmålen Agenda 2030\n",
     " \n",
-    "### Massa poster som pekar på ett API \n",
+    "### Skolmaten - dataportalen: Massa poster som pekar på ett API \n",
     "känns enormt geggigt med vissa kommuner laddar upp ett \"dataset\" på [portalen](https://www.dataportal.se/datasets?p=1&q=skolmat&s=2&t=20&f=&rt=dataset%24esterms_IndependentDataService%24esterms_ServedByDataService&c=false) och alla verkar peka på samma API för skolmat, i de olika portalerna finns ingen konsekvent id för detta API utan varje kommun i detta API som skapar en post i portalen skapar en ny egen identifierare verkar det som.... när man för en gångs skull har något gemensamt som är enkelt att konsumera så lyckas man ändå skapa denna röra... denna \"det blir som det blir\" mentalitet funkar inte någon bör peka med rakhand... plus enormt slöseri med resurser att \"meningslösa\" dataset skall administreras... där saker skall maskinöversättas, alla sätter \"egna kategorier\" känns som någon borde gå tillbaka till ritbordet...\n",
     "* dataportalen \"[Skolmaten i Lund](https://www.dataportal.se/datasets/233_9780/skolmaten-i-lunds-kommun#ref=?p=1&q=skolmat%20Lund&s=2&t=20&f=&rt=dataset%24esterms_IndependentDataService%24esterms_ServedByDataService&c=false)\" -> metadata **[233_9780](https://admin.dataportal.se/store/233/metadata/9780?recursive=dcat)**\n",
     "  * data.europa.eu \"[School meals in the City of Lund](https://data.europa.eu/data/datasets/https-katalog-lund-se-store-1-resource-9?locale=en)\n",
