--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -38,12 +38,18 @@
     "## Misc\n",
     "* **relaterat projekt med större visioner** [Utforma framtidens hållbara skolmåltidssystem!](https://www.vinnova.se/e/hallbart-matsystem/utforma-framtidens-hallbara-skolmaltidssystem/) - 7 miljarder kostar skolmaten per år --> [vi skall skapa hållbart skolmatssystem](https://www.livsmedelsverket.se/ettnyttrecept)\n",
     "  * [\"Ett nytt recept för skolmåltider – hur blir hela matsystemet hållbart?\"](https://www.livsmedelsverket.se/ettnyttrecept)\n",
+    "   \n",
+    "   ![](https://blogger.googleusercontent.com/img/a/AVvXsEhqmzRkP5gSjsXnzJg_cu0BDNq9oYu9VYkFB_QUGxVHnhkaovpgdydJHWQqBkppCEnOBtIscYROolwG6lpAIILkPerMhCUkHSgxAHPxAsDWhsSOQARetuv4qbsZBW9nvS8YtbIdFdmyM_6dkRYVt_vnf3LiDfrIgN8ptnbA7Bj2agny3NJQ1OZVb7qGNw=w426-h241)\n",
+    "  \n",
     "     * [Systemkarta](https://www.livsmedelsverket.se/globalassets/matvanor-halsa-miljo/maltider-vard-skola-omsorg/skola/systemkarta_ett-nytt-recept-pa-skolmaltider_2020.pdf)\n",
     "     ![](https://blogger.googleusercontent.com/img/a/AVvXsEjTxo_p1uQS1Vli8Cy8WppYCl_E_t0PKMqzEtMz1yjcJJiz2TuhGmoX97w-_auQ2HRFlAB63SPqY81QL7H0fg7y6VhJra-to0ey_vmtOXiXQFOtGqQixadhKhmlVhFBO21btL5Igg_T1q3MipN9Z_ioi-in_xiDfQYRR55cKQ_t8SXDrhqxpZE2rfFtAQ=w634-h347) \n",
     ">> Projektet är en del i en större satsning kring mat och hållbarhet som ska öka olika aktörers förmåga att bidra till de globala hållbarhetsmålen Agenda 2030\n",
-    " \n",
+    "  * [8 oktober 2021](https://www.livsmedelsverket.se/matvanor-halsa--miljo/maltider-i-vard-skola-och-omsorg/skola/hallbart-skolmaltidssystem/projektets-arbetsmetoder) ordnade Vinnova och Livsmedelsverket ett webbinarium om det pågående arbetet i projektet Ett nytt recept för skolmåltider \n",
+    "  * projektledare Livsmedelsverket [Elin Sandström](https://www.linkedin.com/in/elin-sandstr%C3%B6m-710aa84a)\n",
     "* [Nationella riktlinjer för måltider i skolan](https://www.livsmedelsverket.se/globalassets/publikationsdatabas/broschyrer-foldrar/riktlinjer-for-maltider-i-skolan.pdf)\n",
     "  * vore proffsigt om serverad måltid kunde kopplas tillbaka till dessa riktlinher men även [Agenda 2030](https://fn.se/vi-gor/vi-stodjer-viktiga-fn-projekt-i-varlden/skolmat/skolmatsprojektet/#:~:text=Skolmat%20minskar%20oj%C3%A4mlikhet%20och%20m%C3%B6jligg%C3%B6r%20h%C3%A5llbar%20utveckling&text=Skolmaten%20m%C3%B6jligg%C3%B6r%20f%C3%B6r%20familjerna%20att,m%C3%A5nga%20barn%20har%20brist%20p%C3%A5.)\n",
+    "* [Long-Term Effects of Childhood Nutrition: Evidence from a School Lunch Reform](https://academic.oup.com/restud/article/89/2/876/6273674) DOI [10.1093/restud/rdab028](https://doi.org/10.1093/restud/rdab028)\n",
+    "* [Äta bör man | Vårt ohållbara ätande (5 juni 2021)](https://www.youtube.com/watch?v=LtCczQMtpA4)\n",
     "\n",
     "### Skolmaten - dataportalen: Massa poster som pekar på ett API \n",
     "känns enormt geggigt med vissa kommuner laddar upp ett \"dataset\" på [portalen](https://www.dataportal.se/datasets?p=1&q=skolmat&s=2&t=20&f=&rt=dataset%24esterms_IndependentDataService%24esterms_ServedByDataService&c=false) och alla verkar peka på samma API för skolmat, i de olika portalerna finns ingen konsekvent id för detta API utan varje kommun i detta API som skapar en post i portalen skapar en ny egen identifierare verkar det som.... när man för en gångs skull har något gemensamt som är enkelt att konsumera så lyckas man ändå skapa denna röra... denna \"det blir som det blir\" mentalitet funkar inte någon bör peka med rakhand... plus enormt slöseri med resurser att \"meningslösa\" dataset skall administreras... där saker skall maskinöversättas, alla sätter \"egna kategorier\" känns som någon borde gå tillbaka till ritbordet...\n",
