--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -43,6 +43,11 @@
     "  \n",
     "     * [Systemkarta](https://www.livsmedelsverket.se/globalassets/matvanor-halsa-miljo/maltider-vard-skola-omsorg/skola/systemkarta_ett-nytt-recept-pa-skolmaltider_2020.pdf)\n",
     "     ![](https://blogger.googleusercontent.com/img/a/AVvXsEjTxo_p1uQS1Vli8Cy8WppYCl_E_t0PKMqzEtMz1yjcJJiz2TuhGmoX97w-_auQ2HRFlAB63SPqY81QL7H0fg7y6VhJra-to0ey_vmtOXiXQFOtGqQixadhKhmlVhFBO21btL5Igg_T1q3MipN9Z_ioi-in_xiDfQYRR55cKQ_t8SXDrhqxpZE2rfFtAQ=w634-h347) \n",
+    "          \n",
+    "     <div>\n",
+    "<img src=\"https://media-exp2.licdn.com/dms/image/C4E22AQHh8J3g_sohDg/feedshare-shrink_1280/0/1653758907458?e=1657756800&v=beta&t=v63-DkCkbzkdFpIHgz4oJXBEoXfj6fYNGOeC1x8AqTc\" width=\"200\"/>\n",
+    "</div>\n",
+    "\n",
     ">> Projektet är en del i en större satsning kring mat och hållbarhet som ska öka olika aktörers förmåga att bidra till de globala hållbarhetsmålen Agenda 2030\n",
     "  * [8 oktober 2021](https://www.livsmedelsverket.se/matvanor-halsa--miljo/maltider-i-vard-skola-och-omsorg/skola/hallbart-skolmaltidssystem/projektets-arbetsmetoder) ordnade Vinnova och Livsmedelsverket ett webbinarium om det pågående arbetet i projektet Ett nytt recept för skolmåltider \n",
     "  * projektledare Livsmedelsverket [Elin Sandström](https://www.linkedin.com/in/elin-sandstr%C3%B6m-710aa84a)\n",
