--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## Skolmaten - Open-Meal\n",
-    "* den här [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb) version 2.0\n",
+    "* den här [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb) version 2.1\n",
     " \n",
     "\n",
     "Enl. [dataportal.se identifierare ifrån RDF](https://community.dataportal.se/topic/368/dataportal-ses-identifierare-ifr%C3%A5n-rdf)\n",
@@ -41,7 +41,8 @@
     "   \n",
     "   ![](https://blogger.googleusercontent.com/img/a/AVvXsEhqmzRkP5gSjsXnzJg_cu0BDNq9oYu9VYkFB_QUGxVHnhkaovpgdydJHWQqBkppCEnOBtIscYROolwG6lpAIILkPerMhCUkHSgxAHPxAsDWhsSOQARetuv4qbsZBW9nvS8YtbIdFdmyM_6dkRYVt_vnf3LiDfrIgN8ptnbA7Bj2agny3NJQ1OZVb7qGNw=w426-h241)\n",
     "  \n",
-    "     * [Systemkarta](https://www.livsmedelsverket.se/globalassets/matvanor-halsa-miljo/maltider-vard-skola-omsorg/skola/systemkarta_ett-nytt-recept-pa-skolmaltider_2020.pdf)\n",
+    "     * [Systemkarta](https://www.livsmedelsverket.se/globalassets/matvanor-halsa-miljo/maltider-vard-skola-omsorg/skola/systemkarta_ett-nytt-recept-pa-skolmaltider_2020.pdf) / [fas 1](https://www.livsmedelsverket.se/globalassets/matvanor-halsa-miljo/maltider-vard-skola-omsorg/skola/sammanstallning-fas-1_ett-nytt-recept-for-skolmaltider_2020.pdf)\n",
+    "     \n",
     "     ![](https://blogger.googleusercontent.com/img/a/AVvXsEjTxo_p1uQS1Vli8Cy8WppYCl_E_t0PKMqzEtMz1yjcJJiz2TuhGmoX97w-_auQ2HRFlAB63SPqY81QL7H0fg7y6VhJra-to0ey_vmtOXiXQFOtGqQixadhKhmlVhFBO21btL5Igg_T1q3MipN9Z_ioi-in_xiDfQYRR55cKQ_t8SXDrhqxpZE2rfFtAQ=w634-h347) \n",
     "          \n",
     "     <div>\n",
@@ -52,9 +53,14 @@
     "  * [8 oktober 2021](https://www.livsmedelsverket.se/matvanor-halsa--miljo/maltider-i-vard-skola-och-omsorg/skola/hallbart-skolmaltidssystem/projektets-arbetsmetoder) ordnade Vinnova och Livsmedelsverket ett webbinarium om det pågående arbetet i projektet Ett nytt recept för skolmåltider \n",
     "  * projektledare Livsmedelsverket [Elin Sandström](https://www.linkedin.com/in/elin-sandstr%C3%B6m-710aa84a)\n",
     "* [Nationella riktlinjer för måltider i skolan](https://www.livsmedelsverket.se/globalassets/publikationsdatabas/broschyrer-foldrar/riktlinjer-for-maltider-i-skolan.pdf)\n",
-    "  * vore proffsigt om serverad måltid kunde kopplas tillbaka till dessa riktlinher men även [Agenda 2030](https://fn.se/vi-gor/vi-stodjer-viktiga-fn-projekt-i-varlden/skolmat/skolmatsprojektet/#:~:text=Skolmat%20minskar%20oj%C3%A4mlikhet%20och%20m%C3%B6jligg%C3%B6r%20h%C3%A5llbar%20utveckling&text=Skolmaten%20m%C3%B6jligg%C3%B6r%20f%C3%B6r%20familjerna%20att,m%C3%A5nga%20barn%20har%20brist%20p%C3%A5.)\n",
+    "  * vore proffsigt om serverad måltid kunde kopplas tillbaka till dessa riktlinjer men även [Agenda 2030](https://fn.se/vi-gor/vi-stodjer-viktiga-fn-projekt-i-varlden/skolmat/skolmatsprojektet/#:~:text=Skolmat%20minskar%20oj%C3%A4mlikhet%20och%20m%C3%B6jligg%C3%B6r%20h%C3%A5llbar%20utveckling&text=Skolmaten%20m%C3%B6jligg%C3%B6r%20f%C3%B6r%20familjerna%20att,m%C3%A5nga%20barn%20har%20brist%20p%C3%A5.)\n",
+    "  \n",
     "* [Long-Term Effects of Childhood Nutrition: Evidence from a School Lunch Reform](https://academic.oup.com/restud/article/89/2/876/6273674) DOI [10.1093/restud/rdab028](https://doi.org/10.1093/restud/rdab028)\n",
-    "* [Äta bör man | Vårt ohållbara ätande (5 juni 2021)](https://www.youtube.com/watch?v=LtCczQMtpA4)\n",
+    "\n",
+    "* [Äta bör man | Vårt ohållbara ätande (5 juni 2021)](https://www.youtube.com/watch?v=LtCczQMtpA4) - samtal på Järvaveckan\n",
+    "\n",
+    "* [SchoolFood4Change](https://www.wwf.se/mat-och-jordbruk/projekt/schoolfood4change/)\n",
+    "> är ett EU-finansierat projekt där WWF tillsammans med flera samarbetspartners arbetar för att skapa mer hållbara skolmåltider och matsystem som främjar både miljön och hälsan. Skolor har stor potential att visa och engagera unga för en mer hållbar livsstil kopplat till sina matval. Projektet är en del av EU-programmet Horizon 2020 och startade januari 2022.\n",
     "\n",
     "### Skolmaten - dataportalen: Massa poster som pekar på ett API \n",
     "känns enormt geggigt med vissa kommuner laddar upp ett \"dataset\" på [portalen](https://www.dataportal.se/datasets?p=1&q=skolmat&s=2&t=20&f=&rt=dataset%24esterms_IndependentDataService%24esterms_ServedByDataService&c=false) och alla verkar peka på samma API för skolmat, i de olika portalerna finns ingen konsekvent id för detta API utan varje kommun i detta API som skapar en post i portalen skapar en ny egen identifierare verkar det som.... när man för en gångs skull har något gemensamt som är enkelt att konsumera så lyckas man ändå skapa denna röra... denna \"det blir som det blir\" mentalitet funkar inte någon bör peka med rakhand... plus enormt slöseri med resurser att \"meningslösa\" dataset skall administreras... där saker skall maskinöversättas, alla sätter \"egna kategorier\" känns som någon borde gå tillbaka till ritbordet...\n",
@@ -101,7 +107,9 @@
     "     1. Skolregistret har skolenhetskod [68637661](https://api.scb.se/UF0109/v2/skolenhetsregister/sv/skolenhet/68637661)\n",
     "        1. beskrivning av [SCB när nya skolenhetskoder skapas](https://www.scb.se/contentassets/6a9472ed9e474943bac8a30391b0ceb1/nar-ska-forandringar-av-skolenheter-leda-till-ny-skolenhetskod.pdf)\n",
     "     1. Wikidata har skolenheten = [Q89198196](https://www.wikidata.org/wiki/Q89198196?uselang=sv) som är en del av grundskolan = WD [Q89904732](https://www.wikidata.org/wiki/Q89904732?uselang=sv) Öxnered skola  \n",
-    "     1. Borde på svenska dataportalen att gå att söka ut vilka dataset som är kopplade till en skolenhet!!! \n",
+    "   1. Borde på svenska dataportalen att gå att söka ut vilka dataset som är kopplade till en skolenhet!!! \n",
+    "   1. Förslag till [github.com/Sambruk/Open-Meal](https://github.com/Sambruk/Open-Meal/issues/14) med **[owl:sameAs](https://www.w3.org/TR/owl-ref/#sameAs-def)** som skall peka på skolenhetskoden\n",
+    "   \n",
     ">   [SFS 2010:800](https://www.riksdagen.se/sv/dokument-lagar/dokument/svensk-forfattningssamling/skollag-2010800_sfs-2010-800) **skolenhet**: av huvudman för annan skolform än förskola organiserad enhet som omfattar verksamhet i en eller flera skolbyggnader som ligger nära varandra och till enheten knuten verksamhet som inte bedrivs i någon skolbyggnad,\n",
     "1. Maträtter verkar skickas runt som textsträngar dvs. man kan inte analysera maträtterna med avseende på näringsinnehåll, vad en skattekrona ger för typ av mat, matsvinn vs. typ av mat som serveras eller om det har med skolan att göra, går ej heller knyta en bild till maten eller skapa ett bildbibliotek med skolmat.... det pratades Sep 23, 2021 om att [Öppna skolplattformen ville ha bild](https://twitter.com/Landgren/status/1440975114200305665?s=20&t=29rZhe6Xxxx4DyrpPALQLw) på maten med NSÖD projektet på [twitter](https://twitter.com/Landgren/status/1446155666117304330?s=20&t=L4s0-FwJw84klDiDm8171Q) men svårt att veta om det blev något har inte hittat NSÖD dokumentation/spec som förklarar vad som gjorts även en brist på en projektyta där NSÖD samplar feedback är svår att hitta.... det som hittats....\n",
     "  1. GITHUB som inte säger mer https://sambruk.github.io/Open-Meal/docs/background\n",
