--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -59,8 +59,11 @@
     "\n",
     "* [Äta bör man | Vårt ohållbara ätande (5 juni 2021)](https://www.youtube.com/watch?v=LtCczQMtpA4) - samtal på Järvaveckan\n",
     "\n",
-    "* [SchoolFood4Change](https://www.wwf.se/mat-och-jordbruk/projekt/schoolfood4change/)\n",
+    "* [SchoolFood4Change](https://www.wwf.se/mat-och-jordbruk/projekt/schoolfood4change/) / projektledare [Ulrika Backlund](https://www.linkedin.com/in/ulrikabacklund)\n",
     "> är ett EU-finansierat projekt där WWF tillsammans med flera samarbetspartners arbetar för att skapa mer hållbara skolmåltider och matsystem som främjar både miljön och hälsan. Skolor har stor potential att visa och engagera unga för en mer hållbar livsstil kopplat till sina matval. Projektet är en del av EU-programmet Horizon 2020 och startade januari 2022.\n",
+    "<div>\n",
+    "<img src=\"https://blogger.googleusercontent.com/img/a/AVvXsEjmEs5foxFDaKW4mXswM0Mh5C3LPdCF-rLhWblR4WdYddSu4ieLwoXqeDLHHq6Up0AMjBe-FGf-NR8l_i7Z03jv8OVjO34IiMOJ1KZRe_SgENLyxZ2m_Nzdl-ZN9RVPZV8ef4qIf9NKy-1_egw_P4g08NMovvn0gtAtFwVM-wF23nZzXYcAEnKuBYlmwg=w615-h233\" width=\"600\"/>\n",
+    "</div>\n",
     "\n",
     "### Skolmaten - dataportalen: Massa poster som pekar på ett API \n",
     "känns enormt geggigt med vissa kommuner laddar upp ett \"dataset\" på [portalen](https://www.dataportal.se/datasets?p=1&q=skolmat&s=2&t=20&f=&rt=dataset%24esterms_IndependentDataService%24esterms_ServedByDataService&c=false) och alla verkar peka på samma API för skolmat, i de olika portalerna finns ingen konsekvent id för detta API utan varje kommun i detta API som skapar en post i portalen skapar en ny egen identifierare verkar det som.... när man för en gångs skull har något gemensamt som är enkelt att konsumera så lyckas man ändå skapa denna röra... denna \"det blir som det blir\" mentalitet funkar inte någon bör peka med rakhand... plus enormt slöseri med resurser att \"meningslösa\" dataset skall administreras... där saker skall maskinöversättas, alla sätter \"egna kategorier\" känns som någon borde gå tillbaka till ritbordet...\n",
