--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## Skolmaten - Open-Meal\n",
-    "* den här [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb) version 2.1\n",
+    "* den här [Notebook](https://github.com/salgo60/open-data-examples/blob/master/Skolmat.se%20API.ipynb) version 2.2\n",
     " \n",
     "\n",
     "Enl. [dataportal.se identifierare ifrån RDF](https://community.dataportal.se/topic/368/dataportal-ses-identifierare-ifr%C3%A5n-rdf)\n",
@@ -60,6 +60,8 @@
     "* [Äta bör man | Vårt ohållbara ätande (5 juni 2021)](https://www.youtube.com/watch?v=LtCczQMtpA4) - samtal på Järvaveckan\n",
     "\n",
     "* [SchoolFood4Change](https://www.wwf.se/mat-och-jordbruk/projekt/schoolfood4change/) / projektledare [Ulrika Backlund](https://www.linkedin.com/in/ulrikabacklund)\n",
+    "  * Appar [matguiden](https://www.wwf.se/mat-och-jordbruk/matguiden/)/ [matkalkylator](https://www.wwf.se/mat-och-jordbruk/matkalkylator/) \n",
+    "  \n",
     "> är ett EU-finansierat projekt där WWF tillsammans med flera samarbetspartners arbetar för att skapa mer hållbara skolmåltider och matsystem som främjar både miljön och hälsan. Skolor har stor potential att visa och engagera unga för en mer hållbar livsstil kopplat till sina matval. Projektet är en del av EU-programmet Horizon 2020 och startade januari 2022.\n",
     "<div>\n",
     "<img src=\"https://blogger.googleusercontent.com/img/a/AVvXsEjmEs5foxFDaKW4mXswM0Mh5C3LPdCF-rLhWblR4WdYddSu4ieLwoXqeDLHHq6Up0AMjBe-FGf-NR8l_i7Z03jv8OVjO34IiMOJ1KZRe_SgENLyxZ2m_Nzdl-ZN9RVPZV8ef4qIf9NKy-1_egw_P4g08NMovvn0gtAtFwVM-wF23nZzXYcAEnKuBYlmwg=w615-h233\" width=\"600\"/>\n",
