--- a/Skolmat.se API.ipynb
+++ b/Skolmat.se API.ipynb
@@ -123,7 +123,7 @@
     "          1. nytt 3.3 gissar jag är ( se exempel nedan)\n",
     "             1. en textsträng med \"ingredients\" där ingridienserna är på engelska och separerade med komma\n",
     "             1. en array med \"allergens\" där allergenerna är textsträngar på engelska utan \"samma som\"\n",
-    "             1. i exmplet finns \"nutrients\" men inget bra exempel hur man tänkt.... gissar man hamnat i en återvändsgränd med alla textsträngar....\n",
+    "             1. i exemplet finns \"nutrients\" men inget bra exempel hur man tänkt.... gissar man hamnat i en återvändsgränd med alla textsträngar....\n",
     "          1.\n",
     "     1. en [versions historik](https://sambruk.github.io/Open-Meal/docs/API/version_history) utan datum men med skillnad av senaste spec och Örebro 2015...\n",
     "  1. bra att man pekar på att geo koordinaterna skall vara [WGS84](https://sv.wikipedia.org/wiki/World_Geodetic_System_1984) ibland anges det som [epsg:4326](https://epsg.io/4326) se [Wikipedia](https://en.wikipedia.org/wiki/EPSG_Geodetic_Parameter_Dataset) vilket kanske kan vara tydligare....\n",
